--- a/index.html
+++ b/index.html
@@ -16,13 +16,18 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link active lg-primary" aria-current="page" href="#" >Home</a>
+        <a class="nav-link active" aria-current="page" href="#" >Home</a>
         <a class="nav-link active" aria-current="page" href="#">About</a>
         <a class="nav-link active" aria-current="page" href="#">Projects</a>
-        <a class="nav-link active" aria-current="page">Contact</a>
+        <a class="nav-link active" aria-current="page" href="#">Contact</a>
       </div>
     </div>
   </div>
 </nav>
+    <div class="container">
+        <img src="img/image.png" alt="">
+        <h1>Hi, I'm Abbosbek Akhmedov</h1>
+        <h5 style="color: rgb(167, 167, 167);">Frontend Developer & UI Designer</h5>
+    </div>
 </body>
 </html>
