--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="but">
             <h1>Hi, I'm Abbosbek Akhmedov</h1>
         <h5 style="color: rgb(167, 167, 167);">Frontend Developer & UI Designer</h5>
-        <button type="button" class="btn btn-primary">Contact Me</button>
+        <button type="button" class="btn btn-primary">Contact <a href="">.</a>Me</button>
         <button type="button" class="btn btn-outline-primary">View Work</button>
         </div>
         
