--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -35,8 +36,9 @@
         <div class="but">
             <h1>Hi, I'm Abbosbek Akhmedov</h1>
         <h5 style="color: rgb(167, 167, 167);">Frontend Developer & UI Designer</h5>
-        <button type="button" class="btn btn-primary">Contact <a href="">.</a>Me</button>
+        <button type="button" class="btn btn-primary">Contact<a href="contact.html">=</a>Me</button>
         <button type="button" class="btn btn-outline-primary">View Work</button>
+        <i class="fa-brands fa-github"><a href="github.com/Muzaffar1111r"></a></i>
         </div>
         
     </div>
