--- a/index.html
+++ b/index.html
@@ -38,9 +38,13 @@
         <h5 style="color: rgb(167, 167, 167);">Frontend Developer & UI Designer</h5>
         <button type="button" class="btn btn-primary">Contact<a href="contact.html">=</a>Me</button>
         <button type="button" class="btn btn-outline-primary">View Work</button>
-        <i class="fa-brands fa-github"><a href="github.com/Muzaffar1111r"></a></i>
+      
         </div>
-        
+        <div class="font">
+            <i class="fa-brands fa-github"></i>
+        <i class="fa-brands fa-linkedin"></i>
+        <i class="fa-brands fa-twitter"></i>
+        </div>
     </div>
 </body>
 </html>
