--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
         <div class="but">
             <h1>Hi, I'm Abbosbek Akhmedov</h1>
         <h5 style="color: rgb(167, 167, 167);">Frontend Developer & UI Designer</h5>
+
+        
         <button type="button" class="btn btn-primary">Contact<a href="contact.html">=</a>Me</button>
         <button type="button" class="btn btn-outline-primary">View Work</button>
       
@@ -44,6 +46,7 @@
             <i class="fa-brands fa-github"></i>
         <i class="fa-brands fa-linkedin"></i>
         <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-telegram"></i>
         </div>
     </div>
 </body>
